# ChangeLog for gnome-extra/gnome-do
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-do/ChangeLog,v 1.8 2008/12/05 22:32:22 loki_val Exp $

*gnome-do-0.6.1.0 (05 Dec 2008)

  05 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/gnome-do-0.6.1.0-mono-2.2.patch, +gnome-do-0.6.1.0.ebuild:
  Bump, bug 225911, ebuild snatched from ikelos' overlay, patch acquired
  from miguel_ in #mono on irc.gnome.org

*gnome-do-0.4.2.0-r2 (09 Nov 2008)

  09 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  +files/gnome-do-0.4.2.0-generic-gnome-desktop.patch,
  +gnome-do-0.4.2.0-r2.ebuild:
  Add a patch to not use the major version when looking for the gnome desktop
  library. This may break on future versions but currently allows gnome-do to
  work with both < 2.24 and >= 2.24 versions of the library.

*gnome-do-0.4.2.0-r1 (28 Sep 2008)

  28 Sep 2008; Hans de Graaff <graaff@gentoo.org>
  +gnome-do-0.4.2.0-r1.ebuild:
  Add xdg-utils as a runtime dependency since gnome-do uses that to open URLs.
  Thanks to steev for the report.

  26 Apr 2008; Hans de Graaff <graaff@gentoo.org> -gnome-do-0.3.2.1.ebuild,
  -gnome-do-0.4.0.1.ebuild, gnome-do-0.4.2.0.ebuild:
  pkgconfig and intltool are build dependencies only. Fix in latest version and
  remove others, bug #219130.

*gnome-do-0.4.2.0 (24 Apr 2008)

  24 Apr 2008; Hans de Graaff <graaff@gentoo.org> +gnome-do-0.4.2.0.ebuild:
  Version bump.

*gnome-do-0.4.0.1 (22 Mar 2008)

  22 Mar 2008; Hans de Graaff <graaff@gentoo.org> +gnome-do-0.4.0.1.ebuild:
  Version bump. Thanks for Arun Raghavan for all the work in #214079

  04 Mar 2008; Hans de Graaff <graaff@gentoo.org> gnome-do-0.3.2.1.ebuild:
  Fix SRC_URI and include mono eclass, fixing #212248.

*gnome-do-0.3.2.1 (03 Mar 2008)

  03 Mar 2008; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +gnome-do-0.3.2.1.ebuild:
  Initial import, thanks to Martin Schanzenbach in #207396.
